<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Proyecto</string>
    <string name="Button">LOGIN</string>
    <string name="Registrarse">Nuevo Usario? Registrarse!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Correo">Correo Electrónico:</string>
    <string name="Nombre">Nombre de Usuario:</string>
    <string name="Contraseña">Contraseña:</string>
    <string name="registra">Registrarse</string>
    <string name="mujer">Mujer</string>
    <string name="hombre">Hombre</string>
    <string name="pantalonMM">Pantalones</string>
    <string name="camisetaMM">Camisetas y tops</string>
    <string name="chaquetaMM">Chaquetas y abrigos</string>
    <string name="zapatoMM">Calzado</string>
    <string name="pantzara">MOM FIT JEANS\n\nTiro alto - Slim mom leg - Tobillero - Comfort\nAzul oscuro</string>
    <string name="panthm">WIDE LEG JEANS\n\nVaqueros de pernera ancha\n Azul claro \n</string>
    <string name="converse">CONVERSE\n\nZapatillas casual unisex Chuck Taylor All Star Alta Lona Converse\nMarrón otoñal</string>
    <string name="botines">BOTINES TACÓN\n\nBotines de mujer en piel y puntera afilada\nNegro</string>
    <string name="zarachaquetamuj">CAZADORA\n\nCazadora corta de borreguito efecto vintage\nMarrón oscuro</string>
    <string name="mangochaquetamuj">BLAZER\n\nBlazer fiesta de lentejuelas\nNegro</string>
    <string name="bershkateemuj">TOP DENIM\n\nTop chaquetilla denim\nAzul</string>
    <string name="pullteemuj">CAMISETA\n\nCamiseta con motivo estampado\nNegro</string>
    <string name="text_label_1">Incio</string>
    <string name="text_label_2">Usuario</string>
    <string name="text_label_3">Ajustes</string>
    <string name="elegir_idioma">Elegir idioma:</string>
    <string name="frances">Francés</string>
    <string name="espanol">Español</string>
    <string name="ingles">Inglés</string>
    <string name="guardar">Guardar</string>
    <string name="btnpantMM2">29,99 EUR H&amp;M</string>
    <string name="btnpantMM22">25,99 EUR BERSHKA</string>
    <string name="btnpantMM1">25,95 EUR ZARA</string>
    <string name="btnpantMM11">22,99 EUR PULL&amp;BEAR</string>

    <string name="btnzapMM1">74,95 EUR EL CORTE INGLÉS</string>
    <string name="btnzapMM11">75,00 EUR LOLA REY</string>
    <string name="btnzapMM2">169,90 EUR EL CORTE INGLÉS</string>
    <string name="btnzapMM22">169,90 EUR UNISA</string>

    <string name="btnchaqMM1">89,99 EUR MANGO</string>
    <string name="btnchaqMM11">59,95 EUR ZARA</string>
    <string name="btnchaqMM2">119,99 EUR VILA</string>
    <string name="btnchaqMM22">99,99 EUR TINTORETTO</string>

    <string name="btnteeMM1">25,99 € H&amp;M</string>
    <string name="btnteeMM11">25,99 EUR BERSHKA</string>
    <string name="btnteeMM2">7,99 EUR PULL&amp;BEAR</string>
    <string name="btnteeMM22">15,99 EUR H&amp;M</string>

    <string name="cargo">BLACK CARGO HOMBRE</string>
    <string name="cargo1">69,97€ E.C.I</string>
    <string name="cargo2">14,99€ H&amp;M</string>
    <string name="baggyh">BLUE BAGGY</string>
    <string name="baggy2">29,99€ BERSHKA</string>
    <string name="baggy1">30,99€ P and B</string>

    <string name="chaqueta">BLACK CHAQUETA</string>
    <string name="parka">KAKI PARKA HOMBRE</string>
    <string name="chaqueta1">159.99€ SPRDRY</string>
    <string name="chaqueta2">350€ TNF</string>
    <string name="parka1">214€ TOMMY.H.</string>
    <string name="parka2">450€ TNF</string>

    <string name="camiseta1">BLACK CAMISETA HOMBRE</string>
    <string name="camiseta2">CAMISETA GRIS H</string>
    <string name="camiseta11">17.99€ TNF</string>
    <string name="camiseta12">14.99€ E.C.I.</string>
    <string name="camiseta21">5.99€ H&amp;M</string>
    <string name="camiseta22">22.60€ E.C.I.</string>

    <string name="zapato1">BLANCO SNEAKERS</string>
    <string name="zapato2">NEW BALANCE</string>
    <string name="zapato11">109.99€ E.C.I.</string>
    <string name="zapato12">119.99€ FootLocker</string>
    <string name="zapato21">149.99€ FootLocker</string>
    <string name="zapato22">120.00€ NB</string>

    <string name="hola">HOLA !</string>
    <string name="rateus">Nos califica:</string>
    <string name="escribir">Escrbirnos:</string>
    <string name="nosotros">Escribe :)</string>
    <string name="enviar">Enviar :)</string>



</resources>