<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Ajustes">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="416dp"
            android:layout_height="56dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:menu="@menu/bottom_navigation_menu" />

        <!-- activity_ajustes.xml -->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            tools:context=".ActivityAjustes">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/elegir_idioma"
                    android:textSize="18sp"
                    android:layout_marginBottom="16dp"/>

                <RadioGroup
                    android:id="@+id/radioGroupLangue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/radioFrancais"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/frances" />

                        <RadioButton
                            android:id="@+id/radioEspagnol"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/espanol" />

                        <RadioButton
                            android:id="@+id/radioAnglais"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ingles" />

                </RadioGroup>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/guardar"
                    android:onClick="enregistrerLangue"/>

        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
